--- a/themes/hexo-theme-icarus-3.0.0-beta.2/layout/widget/toc.ejs
+++ b/themes/hexo-theme-icarus-3.0.0-beta.2/layout/widget/toc.ejs
@@ -28,9 +28,12 @@
     <div class="card widget" id="toc">
         <div class="card widget" >
             <div class="menu">
-                <h3 class="menu-label">
-                    <%= _p('widget.catalogue', Infinity) %>
-                </h3>
+                <!-- <h3 class="menu-label">
+                    
+                     <%= _p('widget.catalogue', Infinity) %>    
+          
+                   
+                </h3> -->
                 <%- tocContent %>
             </div>
         </div>
